--- a/styles/style.css
+++ b/styles/style.css
@@ -1,38 +1,93 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+h1 {
+    margin: 0;
 }
 
 html {
-  block-size: 100%;
+    height: 100%;
+    background-color: #ffc4df;
 }
 
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
+body {
+    position: relative;
+    height: 100%;
+    min-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    z-index: -1;
+
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset {
-  margin: 0;
-  padding: 0;
+body::before {
+    position:absolute;
+    z-index: 1;
+    content: "";
+    inset: 0;
+    background-color: rgba(255,255,255,0.30);
 }
 
-ul,
-ol {
-  list-style: none;
+.page__video {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.page__title {
+    flex-direction: column;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: Raleway, sans-serif;
+    font-size: 116px;
+    font-weight: 800;
+    font-style: normal;
+    line-height: 136px;
+    letter-spacing: 0.035em;
+    word-spacing: -30px;
+    padding-top: 60px;
+    padding-left: 4px;
+    max-width: 800px;
+    z-index: 1;
+}
+
+.page__title::after {
+    position: relative;
+    content:"*";
+    cursor: default;
+}
+
+.page__title:hover {
+    color: #4c4c4c;
+}
+
+.page__title:hover::before {
+    content: "На самом деле нет.\A Важнее \2014  научиться ошибаться.";
+    white-space: pre;
+    position: absolute;
+    top: 180px;
+    left: 435px;
+    padding: 36px 44px;
+    font-family: Raleway, sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 35px;
+    letter-spacing: 0em;
+    word-spacing: 0.1px;
+    text-align: left;
+    text-transform: initial;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0 12px 0 currentColor;
+    border: 2px solid currentColor;
+    border-radius: 20px;
+    
 }
