--- a/styles/style.css
+++ b/styles/style.css
@@ -1,93 +1,300 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-}
-
-h1 {
-    margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100%;
-    background-color: #ffc4df;
+  block-size: 100%;
 }
 
-body {
-    position: relative;
-    height: 100%;
-    min-width: 800px;
-    margin: 0 auto;
-    display: flex;
-    z-index: -1;
-
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
 
-body::before {
-    position:absolute;
-    z-index: 1;
-    content: "";
-    inset: 0;
-    background-color: rgba(255,255,255,0.30);
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
 }
 
-.page__video {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset {
+  margin: 0;
+  padding: 0;
 }
 
-.page__title {
-    flex-direction: column;
-    margin: 0 auto;
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: Raleway, sans-serif;
-    font-size: 116px;
-    font-weight: 800;
-    font-style: normal;
-    line-height: 136px;
-    letter-spacing: 0.035em;
-    word-spacing: -30px;
-    padding-top: 60px;
-    padding-left: 4px;
-    max-width: 800px;
-    z-index: 1;
+ul,
+ol {
+  list-style: none;
 }
 
-.page__title::after {
-    position: relative;
-    content:"*";
-    cursor: default;
+.content {
+  display: flex;
+  justify-content: row;
+  align-items: flex-end;
+  gap: 30px;
+  margin: auto;
+  width: 1140px;
 }
 
-.page__title:hover {
-    color: #4c4c4c;
+.result {
+  width: 711px;
+  height: 456px;
+  gap: 16px;
 }
 
-.page__title:hover::before {
-    content: "На самом деле нет.\A Важнее \2014  научиться ошибаться.";
-    white-space: pre;
-    position: absolute;
-    top: 180px;
-    left: 435px;
-    padding: 36px 44px;
-    font-family: Raleway, sans-serif;
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 35px;
-    letter-spacing: 0em;
-    word-spacing: 0.1px;
-    text-align: left;
-    text-transform: initial;
-    color: #000;
-    background-color: #fff;
-    box-shadow: 0 12px 0 currentColor;
-    border: 2px solid currentColor;
-    border-radius: 20px;
-    
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
 }
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* search */
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-top: 16px;
+}
+
+.search-form__fieldset-title {
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+}
+
+.search-form__label-text {
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  width: 225px;
+  height: 27px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
+  margin-top: 5px;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 212px;
+  min-height: 49px;
+  padding-top: 6px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 212px;
+  min-height: 49px;
+  padding-top: 6px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__label-text {
+  appearance: none;
+  padding-left: 5px;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 0px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  background: #fff;
+  width: 15px;
+  height: 15px;
+}
+
+.search-form__label:has(.search-form__pseudo-checkbox):hover {
+  text-decoration: underline;
+}
+
+fieldset {
+  border: none;
+}
+
+/* content */
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 0em;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  height: 298px;
+  overflow-y: scroll;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 34px;
+  /*background-color: #9e8989;*/
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  margin: 4px;
+}
+
+.content__card-link_current:active {
+  background-color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin-top: 6px;
+}
+
+.content__video-card-description {
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16px;
+  padding-top: 4px;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+
+.button {
+  cursor: pointer;
+  background-color: transparent;
+  color: #fff;
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
+  border: 1px solid #fff;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 3px;
+}
+
+button:hover {
+  background-color: #545050;
+  color:#fff;
+  border: 2px solid #fff;
+}
+
+.search-form__submit-button { /* найти */
+  min-width: 194px;
+  min-height: 34px;
+  margin-top: 20px;
+}
+
+.more-button { /* показать еще*/
+  min-height: 34px;
+  width: 100%;
+  margin-top: auto;
+}
+
