--- a/styles/style.css
+++ b/styles/style.css
@@ -60,20 +60,20 @@ ol {
 }
 
 .result {
-  width: 711px;
-  height: 456px;
-  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
 }
 
 .result__video-container {
   position: relative;
-  width: 711px;
-  height: 386px;
+  inline-size: 711px;
+  block-size: 386px;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -85,11 +85,16 @@ ol {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding-top: 16px;
 }
 
+.search-form__fieldset {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
 .search-form__fieldset-title {
-  font-family: Fira Sans Condensed, sans-serif;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -101,57 +106,44 @@ ol {
   display: flex;
   flex-direction: row;
   width: fit-content;
-}
-
-.search-form__label-text {
   cursor: pointer;
 }
 
+.search-form__label-text {
+  appearance: none;
+  padding-left: 5px;
+}
+
 .search-form__textfield {
-  width: 225px;
-  height: 27px;
+  min-width: 225px;
+  min-height: 27px;
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #fff;
   border-top: 1px solid #fff;
-  margin-top: 5px;
-  font-family: Fira Sans Condensed;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
   text-align: left;
+  color: #fff;
 }
 
 .search-form__checkbox-list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  min-width: 212px;
-  min-height: 49px;
-  padding-top: 6px;
-}
-
-.search-form__checkbox-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  min-width: 212px;
-  min-height: 49px;
-  padding-top: 6px;
+  gap: 15.4px;
+  align-items: center;
 }
 
 .search-form__pseudo-checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 19px;
-  height: 19px;
+  inline-size: 19px;
+  block-size: 19px;
   border: 1px solid #fff;
-}
-
-.search-form__label-text {
-  appearance: none;
-  padding-left: 5px;
 }
 
 .search-form__textfield:focus {
@@ -166,8 +158,8 @@ ol {
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   content: "";
   background: #fff;
-  width: 15px;
-  height: 15px;
+  inline-size: 15px;
+  block-size: 15px;
 }
 
 .search-form__label:has(.search-form__pseudo-checkbox):hover {
@@ -184,8 +176,8 @@ fieldset {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .title {
@@ -204,7 +196,7 @@ fieldset {
 
 .content__list {
   position: relative;
-  height: 298px;
+  block-size: 298px;
   overflow-y: scroll;
 }
 
@@ -220,8 +212,22 @@ fieldset {
   margin: 4px;
 }
 
-.content__card-link_current:active {
+.content__card-link_current {
   background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-position: under;
+  text-decoration-thickness: 1.3px;
 }
 
 .content__video-card {
@@ -235,7 +241,7 @@ fieldset {
 }
 
 .content__video-card-title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -245,7 +251,7 @@ fieldset {
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -254,21 +260,22 @@ fieldset {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
-  height: 103px;
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .button {
   cursor: pointer;
   background-color: transparent;
   color: #fff;
-  font-family: Fira Sans Condensed, sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 22px;
-  letter-spacing: 0em;
   text-align: center;
   border: 1px solid #fff;
+  block-size: 34px;
 }
 
 button:focus {
@@ -277,24 +284,25 @@ button:focus {
 
 button:focus-visible {
   outline: 1px solid #fff;
-  outline-offset: 3px;
+  outline-offset: 1px;
 }
 
 button:hover {
+  text-decoration: underline;
+}
+
+button:active {
   background-color: #545050;
-  color:#fff;
-  border: 2px solid #fff;
 }
 
 .search-form__submit-button { /* найти */
-  min-width: 194px;
-  min-height: 34px;
-  margin-top: 20px;
+  align-self: flex-end;
+  inline-size: 194px;
 }
 
 .more-button { /* показать еще*/
   min-height: 34px;
-  width: 100%;
+  inline-size: 100%;
   margin-top: auto;
 }
 
